[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kiro-credit-router"
version = "0.1.0"
description = "AI Dev router for efficient Kiro credit usage"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
    "pyyaml>=6.0.1"
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
ai-dev = "kiro_credit_router.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
